# ocra-core

./: .gitignore  CMakeLists.txt  README.md
core-framework/: CMakeLists.txt
core-framework/include/ocra/control/: Controller.h  Model.h
core-framework/include/ocra/optim/: Objective.h  SquaredLinearFunction.h
core-framework/src/control/: ControlFrame.cpp  Controller.cpp  Feature.cpp
core-framework/src/optim/: SquaredLinearFunction.cpp
wLQP-Control/: CMakeLists.txt  README.txt
wLQP-Control/quadprog/: CMakeLists.txt
wLQP-Control/wocra/: CMakeLists.txt
wLQP-Control/wocra/include/wocra/Tasks/: wOcraTask.h  wOcraTaskManagerBase.h  wOcraTaskManagerCollectionBase.h  wOcraTaskParser.h  wOcraTaskSequenceBase.h
wLQP-Control/wocra/include/wocra/Tasks/Managers/: wOcraCoMTaskManager.h  wOcraContactSetTaskManager.h  wOcraContactTaskManager.h  wOcraFullPostureTaskManager.h  wOcraPartialPostureTaskManager.h  wOcraSegCartesianTaskManager.h  wOcraSegOrientationTaskManager.h  wOcraSegPoseTaskManager.h  wOcraVariableWeightsTaskManager.h
wLQP-Control/wocra/include/wocra/Trajectory/: wOcraExperimentalTrajectory.h  wOcraLinearInterpolationTrajectory.h  wOcraMinimumJerkTrajectory.h  wOcraTrajectory.h
wLQP-Control/wocra/pkg-config/: CMakeLists.txt
wLQP-Control/wocra/src/: CMakeLists.txt
wLQP-Control/wocra/src/Solvers/: OneLevelSolver.cpp
wLQP-Control/wocra/src/Tasks/: wOcraTask.cpp  wOcraTaskManagerBase.cpp  wOcraTaskManagerCollectionBase.cpp  wOcraTaskParser.cpp  wOcraTaskSequenceBase.cpp
wLQP-Control/wocra/src/Tasks/Managers/: wOcraCoMTaskManager.cpp  wOcraContactSetTaskManager.cpp  wOcraContactTaskManager.cpp  wOcraFullPostureTaskManager.cpp  wOcraPartialPostureTaskManager.cpp  wOcraSegCartesianTaskManager.cpp  wOcraSegOrientationTaskManager.cpp  wOcraSegPoseTaskManager.cpp  wOcraVariableWeightsTaskManager.cpp
wLQP-Control/wocra/src/Trajectory/: wOcraExperimentalTrajectory.cpp  wOcraLinearInterpolationTrajectory.cpp  wOcraMinimumJerkTrajectory.cpp  wOcraTrajectory.cpp
